common/parser/src/rules/relations/snapshots/parser__rules__relations__relations_engine__tests__many_to_many_relation_monodirectional.snap
---
source: common/parser/src/rules/relations/relations_engine.rs
assertion_line: 303
expression: "&ctx.relations"
---
{
    "AuthorRelatePost": MetaRelation {
        name: "AuthorRelatePost",
        kind: ManyToMany,
        relation: (
            Some(
                "Author",
            ),
            "Post",
        ),
        birectional: true,
    },
}
