common/parser/src/rules/relations/snapshots/parser__rules__relations__relations_engine__tests__one_to_many_relation_bidirectional_1.snap
---
source: common/parser/src/rules/relations/relations_engine.rs
assertion_line: 247
expression: "&ctx.relations"
---
{
    "AuthorRelatePost": MetaRelation {
        name: "AuthorRelatePost",
        kind: ManyToOne,
        relation: (
            Some(
                "Author",
            ),
            "Post",
        ),
        birectional: true,
    },
}
