common/parser/src/rules/relations/snapshots/parser__rules__relations__relations_engine__tests__one_to_many_relation_monodirectional_2.snap
---
source: common/parser/src/rules/relations/relations_engine.rs
expression: "&ctx.relations"
---
{
    "AuthorRelatePost": MetaRelation {
        name: "AuthorRelatePost",
        kind: OneToMany,
        relation: (
            Some(
                "Author",
            ),
            "Post",
        ),
        bidirectional: false,
    },
}
