common/parser/src/rules/relations/snapshots/parser__rules__relations__relations_engine__tests__one_to_one_relation_bidirectionnal.snap
---
source: common/parser/src/rules/relations/relations_engine.rs
expression: "&ctx.relations"
---
{
    "AuthorRelatePost": MetaRelation {
        name: "AuthorRelatePost",
        kind: OneToOne,
        relation: (
            Some(
                "Author",
            ),
            "Post",
        ),
        birectional: true,
    },
}
