common/parser/src/rules/relations/snapshots/parser__rules__relations__relations_engine__tests__one_to_one_relation_monodirectional.snap
---
source: common/parser/src/rules/relations/relations_engine.rs
assertion_line: 137
expression: "&ctx.relations"
---
{
    "AuthorRelatePost": MetaRelation {
        name: "AuthorRelatePost",
        kind: OneToOne,
        relation: (
            Some(
                "Post",
            ),
            "Author",
        ),
        birectional: false,
    },
}
